fix(vdialog): add top padding to v-card-text when it's the first child
fix #8679

--- a/packages/vuetify/src/components/VDialog/VDialog.sass
+++ b/packages/vuetify/src/components/VDialog/VDialog.sass
@@ -28,6 +28,9 @@
     > .v-card__text
       padding: 0 24px 20px
 
+      &:first-child
+        padding-top: 20px
+
 // Element
 .v-dialog__content
   align-items: center
